src/main/java/com/example/model_predict/utils/Error/ErrorType.java
package com.example.model_predict.utils.Error;

/**
 * @author Dr.Awe
 * @date 2024-07-25 17:32
 */

public interface ErrorType {
    ErrorData getError();
}
